--- a/src/styles.colors.scss
+++ b/src/styles.colors.scss
@@ -15,3 +15,5 @@ $secondary-color: color('blue', 'lighten-2') !default;
 $success-color: color('green', 'base') !default;
 $error-color: color('red', 'base') !default;
 $link-color: color('light-blue', 'darken-1') !default;
+$navbar-color: white;
+$navbar-text-color: $primary-color;
