--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,15 @@
 <tg-navbar></tg-navbar>
-<main class="container">
+<main>
   <router-outlet></router-outlet>
 </main>
 <tg-footer></tg-footer>
+
+<div #updateModal=modalDirective tgModal class="modal bottom-sheet">
+  <div class="modal-content">
+    <h4>New Version Available</h4>
+    <p>There is a new version of the app, press the "Update" button to get it</p>
+  </div>
+  <div class="modal-footer">
+    <a (click)="updateApp()" class="modal-close waves-effect waves-light btn">Update</a>
+  </div>
+</div>
