--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="container">
       © {{ currentYear }} Copyright
       <a [href]="footerLink" target="_blank" rel="noopener noreferrer">
-        Startup Weekend Cochabamba
+        Ticket Generator
       </a>
     </div>
   </div>
