--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,23 +1,30 @@
-<div class="row">
-  <form #loginForm="ngForm" class="col s10 offset-s1 m6 offset-m3" novalidate>
-    <div class="row red-text">
-      <p>{{ auth.authMessage }}</p>
-    </div>
-    <div class="row">
-      <div class="input-field">
-        <input id="email" type="email" name="email" [(ngModel)]="email" required>
-        <label for="email">Email</label>
+<div class="container">
+  <div class="row">
+    <form #loginForm="ngForm" class="col s10 offset-s1 m6 offset-m3" novalidate>
+      <div class="row center-align">
+        <img id="login-image" src="assets/images/logo.png" alt="Ticket Generator">
       </div>
-    </div>
-    <div class="row">
-      <div class="input-field">
-        <input id="password" type="password" name="password" [(ngModel)]="password" required>
-        <label for="password">Password</label>
+      <div class="row red-text">
+        <p>{{ auth.authMessage }}</p>
       </div>
-    </div>
-    <div class="row right">
-      <button class="waves-effect waves-light btn" [disabled]="loginForm.invalid"
-        (click)="auth.login(email, password)">Sign In</button>
-    </div>
-  </form>
+      <div class="row">
+        <div class="input-field">
+          <input id="email" type="email" name="email" [(ngModel)]="email" required>
+          <label for="email">Email</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field">
+          <input id="password" type="password" name="password" [(ngModel)]="password" required>
+          <label for="password">Password</label>
+        </div>
+      </div>
+      <div class="row right">
+        <button class="waves-effect waves-light btn" [disabled]="loginForm.invalid"
+          (click)="auth.login(email, password)">Sign In</button>
+      </div>
+    </form>
+  </div>
 </div>
+
+<tg-spinner-loader *ngIf="auth.validatingCredentials"></tg-spinner-loader>
