Change login logo image

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <form #loginForm="ngForm" class="col s10 offset-s1 m6 offset-m3" novalidate>
       <div class="row center-align">
-        <img id="login-image" src="assets/images/logo.png" alt="Ticket Generator">
+        <img id="login-image" src="assets/images/main-logo.png" alt="Ticket Generator">
       </div>
       <div class="row red-text">
         <p>{{ auth.authMessage }}</p>
